--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>SolarEnergyViz</title>
 </head>
 <body>
+    <header>
+        <ul>
+            <li><a href="NewTable.html">Graph</a></li>
+            <li><a href="Graph.html">Table</a></li>
+            <!-- Add more links as needed -->
+        </ul>
+    </header>
     SolarEnergyViz
 </body>
 </html>
