--- a/NewTable.html
+++ b/NewTable.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SolarEnergyViz</title>
+</head>
+<body>
+    <table>
+  <tr>
+    <th>Date</th>
+    <th>Conversion Efficiency</th>
+  </tr>
+  <tr>
+    <td>12/2/2</td>
+    <td>wewee</td>
+  </tr>
+</table>
+</body>
+</html>
+<link rel="stylesheet" href="index.css">
+
 
