--- a/html/index.html
+++ b/html/index.html
@@ -11,8 +11,8 @@
         <h1 class="centered">SolarEnergyViz</h1>
     </header>
         <nav>
-            <a href="NewTable.html">Graph</a>
-            <a href="Graph.html">Table</a>
+            <a href="NewTable.html">Table</a>
+            <a href="Graph.html">Graph</a>
             
         </nav>
     
