--- a/html/NewTable.html
+++ b/html/NewTable.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <nav>
+    <a href="index.html">Back to Home</a>
+  </nav>
+  <style>
+    /* Center the table within the container */
+    .center-table {
+        margin: 0 auto;
+    }
+</style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SolarEnergyViz</title>
 </head>
 <body>
-    <table>
+    <table class="center-table" border="1">
+
   <tr>
     <th>Date</th>
     <th>Conversion Efficiency</th>
