updated the pages and added back buttons

--- a/html/past.html
+++ b/html/past.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+<nav>
+    <a href="index.html">Back to Home</a>
+    </nav>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,12 +12,11 @@
 </head>
 <body>
     <header>
-        <h1 class="centered">SolarEnergyViz</h1>
+        <h1 class="centered">Past 10 years energy conversion</h1>
     </header>
         <nav>
-            <a href="Buyback.html">Solar Buy Back</a>
-            <a href="Compare.html">Panel Compare</a>
-            <a href="past.html">Past 10 Years Efficiency</a>
+            <a href="NewTable.html">Table</a>
+            <a href="Graph.html">Graph</a>
             
         </nav>
     
