--- a/html/table2.html
+++ b/html/table2.html
@@ -15,17 +15,19 @@
     <title>SolarEnergyViz</title>
   </head>
   <body>
-      <table class="center-table" border="1">
-        <tr>
-          <th>Date</th>
-          <th>Conversion Efficiency</th>
-        </tr>
-        <tr>
-          <td>12/2/2</td>
-          <td>wewee</td>
-        </tr>
-      </table>
-
+    <table id="csvTable">
+      <thead>
+          <tr>
+              <th>Date</th>
+              <th>Hour</th>
+              <th>Total_KW</th>
+              <th>DNI(KWH)</th>
+              <th>Energy_conversion</th>
+          </tr>
+      </thead>
+      <tbody>
+      </tbody>
+  </table>
   <script>
     // Replace 'data.csv' with the path to your CSV file
     fetch('daily_energy_conversion.csv')
