added a picture to home page

--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,13 @@
         This project was made to investigate the differences between triple-junction amorphous and poly-crystalline
         solar panels, and to inform people about the potential benefits of switching to solar energy. The links above provide a
         calculator that estimates the potential profit of switching to solar, a comparison between the 2 types of solar panels, and a
-        compilation of the last 10 years of data collected by existing solar panels in the University of Iowa's Electric Vehicle Charging Array.
+        compilation of the last 10 years of data collected by existing solar panels in the University of Iowa's Electric
+        Vehicle Charging Array.
+    </div>
+    <div>
+        <pic>
+        <img src="./Assets/EVSA.png" alt="EVSA" width="500" height="350">
+        </pic>
     </div>
     
     <footer>
