switched table links

--- a/html/Compare.html
+++ b/html/Compare.html
@@ -15,7 +15,7 @@
         <h1 class="centered">Compare Poly-crystalline and triple junction amorphous solar panels</h1>
     </header>
         <nav>
-            <a href="table2.html">Table</a>
+            <a href="NewTable.html">Table</a>
             <a href="compareGraph.html">Graph</a>
             
         </nav>
