--- a/html/past.html
+++ b/html/past.html
@@ -15,7 +15,7 @@
         <h1 class="centered">Past 10 years energy conversion</h1>
     </header>
         <nav>
-            <a href="NewTable.html">Table</a>
+            <a href="table2.html">Table</a>
             <a href="Graph.html">Graph</a>
             
         </nav>
