--- a/html/table2.html
+++ b/html/table2.html
@@ -30,7 +30,7 @@
   </table>
   <script>
     // Replace 'data.csv' with the path to your CSV file
-    fetch('daily_energy_conversion.csv')
+    fetch('hourly_energy_conversion.csv')
         .then(response => response.text())
         .then(data => {
             const table = document.querySelector('#csvTable tbody');
