--- a/html/table2.html
+++ b/html/table2.html
@@ -29,12 +29,11 @@
       </tbody>
   </table>
   <script>
-    // Replace 'data.csv' with the path to your CSV file
-    fetch('daily_energy_conversion.csv')
+    fetch('hourly_energy_conversion.csv')
         .then(response => response.text())
         .then(data => {
             const table = document.querySelector('#csvTable tbody');
-            const rows = data.split('\n').slice(1); // Remove the header row
+            const rows = data.split('\n').slice(1);
 
             rows.forEach(row => {
                 const cols = row.split(',');
