centered 10 year data table and fixed back buttons

--- a/html/table2.html
+++ b/html/table2.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <nav>
-      <a href="index.html">Back to Home</a>
+      <a href="past.html">Back</a>
     </nav>
     <style>
       /* Center the table within the container */
@@ -15,7 +15,7 @@
     <title>SolarEnergyViz</title>
   </head>
   <body>
-    <table id="csvTable">
+    <table class="center-table" id="csvTable">
       <thead>
           <tr>
               <th>Date</th>
