--- a/html/NewTable.html
+++ b/html/NewTable.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <nav>
-    <a href="past.html">Back</a>
+    <a href="Compare.html">Back</a>
   </nav>
   <style>
     /* Center the table within the container */
