--- a/html/NewTable.html
+++ b/html/NewTable.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <nav>
-    <a href="Compare.html">Back</a>
-  </nav>
-  <style>
-    /* Center the table within the container */
-    .center-table {
-        margin: 0 auto;
-    }
-</style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <style>
+        /* Define CSS rules to center the table */
+        .center-table {
+            margin: 0 auto;
+        }
+    </style>
     <title>SolarEnergyViz</title>
 </head>
 <body>
-    <table class="center-table" border="1">
+    <nav>
+        <a href="Compare.html">Back</a>
+    </nav>
 
-  <tr>
-    <th>Date</th>
-    <th>Conversion Efficiency</th>
-  </tr>
-  <tr>
-    <td>12/2/2</td>
-    <td>wewee</td>
-  </tr>
-</table>
+    <table class="center-table", cellspacing = 0>
+        <tr>
+            <th>Date</th>
+            <th>Conversion Efficiency</th>
+        </tr>
+        <tr>
+            <td>12/2/2</td>
+            <td>wewee</td>
+            
+        </tr>
+    </table>
 </body>
 </html>
-<link rel="stylesheet" href="index.css">
-
-
