--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -1,24 +1,13 @@
 <html>
     <head>
+        <nav>
         <a href="index.html">Back to Home</a>
+        </nav>
     </head>
     <head>
-        <style>
-            /* Define a CSS grid layout with 2 rows and 2 columns */
-            .grid-container {
-                display: grid;
-                grid-template-columns: repeat(2, 1fr); /* Two equal-width columns */
-                grid-gap: 10px; /* Gap between grid items */
-            }
-    
-            /* Style the text boxes (you can customize this further) */
-            .text-box {
-                border: 1px solid #ccc;
-                padding: 10px;
-                font-size: 16px;
-                width: 100%; /* Make the text boxes fill their grid cells */
-            }
-        </style>
+        <div class="Maintext">
+            Nolan Scherer
+        </div>
     </head>
     <body>
 
