--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -4,11 +4,13 @@
         <a href="index.html">Back to Home</a>
         </nav>
     </head>
-    <head>
-        <div class="Maintext">
-            Nolan Scherer
-        </div>
-    </head>
+    <div class="AboutText">
+        <nav class="nav-item">Nolan Scherer</nav>
+        <nav class="nav-item">Karan</nav>
+        <nav class="nav-item">Sai</nav>
+        <nav class="nav-item">Damir</nav>
+    </div>
+    
     <body>
 
     </body>
