--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -7,7 +7,12 @@
     <div class="AboutText">
         <nav class="nav-item">Nolan Scherer</nav>
         <nav class="nav-item">Karan</nav>
-        <nav class="nav-item">Sai</nav>
+        <nav class="nav-item">Sai Tarun Sathyan<br>
+            Rochester Institute of Technology, Masters in Computer Science<br>
+            <pic>
+                <img src="./Assets/sai.jpg" alt = "sai" width="540" height="470">
+            </pic>
+        </nav>
         <nav class="nav-item">Damir</nav>
     </div>
     
