--- a/html/compareGraph.html
+++ b/html/compareGraph.html
@@ -6,8 +6,7 @@
   </nav>
   </head>
   <body>
-    <image src="plot-daily.png"></image>
-    <image src="plot-hourly.png"></image>
+    <image src="plot-energy_conversion.png"></image>
   </body>
   </html>
   <link rel="stylesheet" href="index.css">
