Changed font compare table

--- a/html/NewTable.html
+++ b/html/NewTable.html
@@ -19,12 +19,12 @@
 
     <table class="center-table", cellspacing = 0 id="csvTable">
         <thead>
-            <tr>
+            <tr class="new_tr">
                 <th>Month</th>
                 <th>Total_KW</th>
                 <th>Siliken_energy_conversion</th>
                 <th>Uni_solar_energy_conversion</th>
-            </tr>
+            </tr> 
         </thead>
         <tbody>
         </tbody>
