--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -5,15 +5,39 @@
         </nav>
     </head>
     <div class="AboutText">
-        <nav class="nav-item">Nolan Scherer</nav>
-        <nav class="nav-item">Karan</nav>
         <nav class="nav-item">Sai Tarun Sathyan<br>
             Rochester Institute of Technology, Masters in Computer Science<br>
             <pic>
-                <img src="./Assets/sai.jpg" alt = "sai" width="540" height="470">
-            </pic>
+                <img src="./Assets/sai.jpg" alt = "sai" width="356.5" height="310">
+            </pic><br>
+            <a href ="https://www.linkedin.com/in/sai-tarun-6143431b4">
+                LinkedIn
+            </a>
         </nav>
-        <nav class="nav-item">Damir</nav>
+        <nav class="nav-item">Damir Temir<br>
+            University of Illinois Springfield, Computer Science<br>
+            <pic>
+                <img src="./Assets/damir.jpg" alt = "damir" width="356.5" height="310">
+            </pic><br>
+            <a href ="https://www.linkedin.com/in/sai-tarun-6143431b4">
+                LinkedIn
+            </a></nav>
+        <nav class="nav-item">Nolan Scherer<br>
+            University of Iowa, Bachelors in Data Science<br>
+            <pic>
+                <img src="./Assets/nolan.jpg" alt = "nolan" width="356.5" height="310">
+            </pic><br>
+            <a href ="www.linkedin.com/in/nolan-scherer-564740276">
+                LinkedIn
+            </a></nav>
+        <nav class="nav-item">Karan<br>
+            University of Iowa, Bachelors in Computer Science<br>
+            <pic>
+                <img src="./Assets/karan.jpg" alt = "karan" width="356.5" height="310">
+            </pic><br>
+            <a href ="https://www.linkedin.com/in/sai-tarun-6143431b4">
+                LinkedIn
+            </a></nav>
     </div>
     
     <body>
