--- a/html/NewTable.html
+++ b/html/NewTable.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <nav>
-        <a href="past.html">Back</a>
+        <a href="Compare.html">Back</a>
     </nav>
 
     <table class="center-table", cellspacing = 0 id="csvTable">
