--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -10,7 +10,7 @@
             <pic>
                 <img src="./Assets/sai.jpg" alt = "sai" width="356.5" height="310">
             </pic><br>
-            <a href ="https://www.linkedin.com/in/sai-tarun-6143431b4">
+            <a class="link" href ="https://www.linkedin.com/in/sai-tarun-6143431b4">
                 LinkedIn
             </a>
         </nav>
