--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -19,7 +19,7 @@
             <pic>
                 <img src="./Assets/damir.jpg" alt = "damir" width="356.5" height="310">
             </pic><br>
-            <a href ="https://www.linkedin.com/in/sai-tarun-6143431b4">
+            <a class="link" href ="https://www.linkedin.com/in/damirtemir/">
                 LinkedIn
             </a></nav>
         <nav class="nav-item">Nolan Scherer<br>
@@ -27,7 +27,7 @@
             <pic>
                 <img src="./Assets/nolan.jpg" alt = "nolan" width="356.5" height="310">
             </pic><br>
-            <a href ="www.linkedin.com/in/nolan-scherer-564740276">
+            <a class="link" href ="https://www.linkedin.com/in/nolan-scherer-564740276">
                 LinkedIn
             </a></nav>
         <nav class="nav-item">Karan<br>
@@ -35,7 +35,7 @@
             <pic>
                 <img src="./Assets/karan.jpg" alt = "karan" width="356.5" height="310">
             </pic><br>
-            <a href ="https://www.linkedin.com/in/sai-tarun-6143431b4">
+            <a class="link" href ="https://www.linkedin.com/in/karansingh2">
                 LinkedIn
             </a></nav>
     </div>
